--- a/index.html
+++ b/index.html
@@ -1,21 +1,36 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pockest</title>
   <meta name="description" content="마음에 드는 상품을 저장하고 폴더별로 관리하세요" />
+  <style data-viewport-lock="true">
+    /* CRITICAL: Force viewport lock immediately */
+    html,
+    body {
+      width: 100vw;
+      height: 100vh;
+      margin: 0;
+      padding: 0;
+      overflow: hidden !important;
+      /* KILL THE SCROLL HERE */
+      position: fixed;
+      /* Lock body in place */
+    }
+
+    #root {
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+  </style>
 </head>
+
 <body>
   <div id="root"></div>
   <script type="module" src="/src/pages/dashboard/main.tsx"></script>
 </body>
+
 </html>
-
-
-
-
-
-
-
-
